--- a/bootstrap_sass/prepros.config
+++ b/bootstrap_sass/prepros.config
@@ -21,7 +21,7 @@
       "scroll": true
     },
     "watcher": {
-      "enable": false,
+      "enable": true,
       "maxFiles": 2000,
       "usePolling": false,
       "pollingInterval": 500,
@@ -488,7 +488,7 @@
           },
           {
             "task": "minify-css",
-            "enable": true
+            "enable": false
           }
         ],
         "output": {
@@ -912,6 +912,19 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "scss/style.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "css/style.css",
+          "sourceMap": true
+        }
+      }
+    ]
   }
 }
